--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hiiku/nucamp-campsites.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hiiku/nucamp-campsites/issues"
+  },
+  "homepage": "https://github.com/hiiku/nucamp-campsites#readme"
 }
